# SLAE_4term

./: CMakeLists.txt  main.cpp
Tridiagonal_matrix/: Tridiagonal_matrix.cpp  Tridiagonal_matrix.h  Tridiagonal_matrix.hpp
Tridiagonal_matrix_solver/: Tridiag_matrix_solver.cpp  Tridiag_matrix_solver.h  Tridiag_matrix_solver.hpp
src/: CMakeLists.txt  CSR_matrix.h  Dense_matrix.h  Tridiagonal_matrix.h  Vector_operations.h
src/CRS_matrix/: CSR_matrix.h  CSR_matrix.hpp
src/Dense_matrix/: Dense_matrix.h  Dense_matrix.hpp
src/Tridiagonal_matrix/: Tridiagonal_matrix.h  Tridiagonal_matrix.hpp
src/Vector_operations/: Vector_operations.h
tests/: CMakeLists.txt  CSR_test.cpp  tridiag_test.cpp
tests/CSR_tests/: CSR_matrix_BiCG_method_test.txt  CSR_matrix_GMRES(n)_method_test.txt  CSR_matrix_get_elems.txt  CSR_matrix_mult_vector_1.txt  CSR_matrix_mult_vector_2.txt  CSR_test.cpp  CSR_test.py  CSR_transposed_matrix_test.txt  DOK_cell_sort.txt
tests/Tasks/: Tasks.cpp
tests/Tasks/Test_1/: Tasks3_4.cpp
tests/Tasks/Test_1/Task3/: data.txt
tests/Tasks/Test_1/Task4/: data_Fixed_point.txt  data_Gauss_Seidel.txt  data_Jacobi.txt
tests/Tasks/Test_2/: Tasks1_2.cpp
tests/Tasks/Test_2/Task1/: different_eig_max.txt  residuals.txt
tests/Tasks/Test_2/Task2/: CG.txt  SIM.txt  SIM_Optimal_tau.txt  SIM_with_Cheb_acceleration.txt  Steepest descent.txt
tests/dense_tests/: Dense_matrix_QR_decomposition_1.txt  Dense_matrix_QR_decomposition_2.txt  Dense_matrix_get_elem.txt  Dense_matrix_get_elems.txt  Dense_matrix_mult_vector_1.txt  Dense_matrix_mult_vector_2.txt  dense_test.cpp  dense_test.py
tests/tridiag_tests/: tridiag_test.cpp
